        upon completion.

2011-06-16  Cedric Bail

	* Fix ecore_x_selection_convert not taking selection length into account.

2011-06-17  Mike Blumenkrantz

        * ecore_con_server_timeout_get/set now applies to client-type servers

2011-06-20  Ulrich Eckhardt

        * Removed support for evas xrender engine from ecore-evas as
        it is not a deprecated engine in evas and no longer needs support.

2011-06-20  Jihoon Kim

        * Ecore_IMF: Added ecore_imf_context_input_panel_enabled_set/get API

2011-06-25  Mike Blumenkrantz

        * Fix security hole in openssl certificate verification
        * Fix gnutls server-client certificate verification
        * New function: ecore_con_ssl_server_verify_basic for only verifying
            certificates against a server's Common Name (CN) or its
            Subject Alternative Name (if available)

2011-06-28  Carsten Haitzler (The Rasterman)

        * Add ecore_throttle mechanism to voluntarily do powersaving to
        avoid wakeups and excess animation etc. when in the background
        or another "powersave" state.

2011-07-01  Carsten Haitzler (The Rasterman)

        * Fix epoll delete fd handling in child process - #796

2011-07-07  Jihoon Kim

        * Ecore_IMF: Added ecore_imf_context_cursor_location_set API

2011-07-22  Mike Blumenkrantz

        * Added ecore_con_url_url_get

2011-07-26  Carsten Haitzler (The Rasterman)

        * Fix timer precision handling for grouping timer ticks so
        they actually do tick off together

2011-07-28  Cedric Bail

	* Add ecore_main_loop_thread_safe_call_async.

2011-07-26  Carsten Haitzler (The Rasterman)

        * Make ecore-evas give more errors on stderr when engines are
        not found.

2011-08-16  Cedric Bail

	* Add ecore_main_loop_thread_safe_call_sync.

2011-08-17  Cedric Bail

	* Add ecore_thread_main_loop_begin and ecore_thread_main_loop_end.
	Usefull to protect EFL call from another thread.
